--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,6 +4,6 @@
          <td><a href="notes">TPT Notes</a></td>
          <td><a href="projects">Projects</a></td>
          <td><a href="createtask">Create Task</a></td>
-         <td><a href="Tickets">Tickets</a></td>
+         <td><a href="tickets">Tickets</a></td>
      </tr>
  </table>
